fix(posts): minor fixes for POST /posts/create endpoint
